minor wording update in coding.html

--- a/coding.html
+++ b/coding.html
@@ -200,7 +200,7 @@
                     code for school projects</i></h5>
             <h5 class="text-center"><i>Please contact me at <a
                         href="mailto:psmit703@outlook.com">psmit703@outlook.com</a> to request a private copy</i></h5>
-            <h5 class="text-center"><i>Additionally, some projects may not have any publicly available code</i></h5>
+            <h5 class="text-center"><i>Additionally, some projects may not have any available code</i></h5>
 
             <div class="card-spacing"></div>
 
