updated humanities resume

--- a/resume.html
+++ b/resume.html
@@ -379,9 +379,8 @@
                         deterrent for those running away.
                     </li>
                 </ul>
-                <li><strong>"Welcome to the West, it's been waiting for you"<span style="float: right">(Civil War and...
-                            at UMD, November
-                            2023)</span></strong></li>
+                <li><strong>"Welcome to the West, it's been waiting for you"<span style="float: right">(Civil War and
+                            Industrialization at UMD, November 2023)</span></strong></li>
                 <ul>
                     <li>Through analyzing Laura Ingalls Wilder's Little House series and Willa Cather's My Ántonia, this
                         paper argues that, in the decades following the westward expansion seen in the mid-to-late
