minor formatting change in resume.html

--- a/resume.html
+++ b/resume.html
@@ -382,7 +382,8 @@
                 <li><strong>"Welcome to the West, it's been waiting for you"<span style="float: right">(Civil War and
                             Industrialization at UMD, November 2023)</span></strong></li>
                 <ul>
-                    <li>Through analyzing Laura Ingalls Wilder's Little House series and Willa Cather's My Ántonia, this
+                    <li>Through analyzing Laura Ingalls Wilder's <i>Little House</i> series and Willa Cather's <i>My
+                            Ántonia</i>, this
                         paper argues that, in the decades following the westward expansion seen in the mid-to-late
                         nineteenth century, popular media romanticized it to serve as a distraction from the pressing
                         events of World War I and the Great Depression. This paper shows that these books simultaneously
