Minor update to technical resume

--- a/resume.html
+++ b/resume.html
@@ -240,7 +240,8 @@
                     <li>Dual Degree: Bachelor of Science, Computer Science; Bachelor of Arts, History</li>
                     <li>Minor, Trumpet Performance</li>
                     <li>Cumulative GPA: 3.392 (Jan 2024)</li>
-                    <li>Relevant Coursework: Programming Language Paradigms, Cryptography, Intro to Compilers; Intro to
+                    <li>Relevant Coursework: Programming Language Paradigms, Intro to Data Science, Intro to Compilers;
+                        Intro to
                         AI; Advanced Data Structures; Algorithms</li>
                     <li>Member: Association for Computing Machinery; Multi-Agent Reinforcement Learning Reading Group;
                         History Undergraduate Association</li>
