minor technical resume update

--- a/resume.html
+++ b/resume.html
@@ -253,7 +253,7 @@
             <ul>
                 <li>Languages: Python, Java, Racket, OCaml, C, Rust, Ruby, HTML, CSS, JavaScript, SQL</li>
                 <li>Frameworks: Bootstrap, jQuery, Plotly.js</li>
-                <li>Tools and Environments: Linux, VS Code, Eclipse IDE, version control (Git/GitHub)</li>
+                <li>Tools and Environments: Linux, VS Code, Eclipse IDE, version control (Git/GitHub), Docker</li>
                 <li>Coding Skills: Functional programming, debugging, good code readability</li>
             </ul>
 
