added comet discovery verification to coding.html

--- a/coding.html
+++ b/coding.html
@@ -205,6 +205,33 @@
             <div class="card-spacing"></div>
 
             <!-- begin project descriptions -->
+            <div id="comet-disc-veri" class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
+                        <h5 class="card-title">Comet Discovery Verification (Python, SQL)<span
+                                style="float: right;">(Dec
+                                2023 - Feb 2024)</span></h5>
+                        <p class="card-text">Created a script for the NASA Planetary Data System Small Bodies Node at
+                            the University of Maryland that verifies data and finds inconsistencies in existing
+                            databases regarding the way comet observations are recorded.
+                            <br><br>
+                            For numerous reasons, comet discovery observations have not always been historically been
+                            recorded as discoveries. This script interacts with SBN's local PostgreSQL database and with
+                            the Minor Planet Center's comet orbital elements table in order to find these discrepancies.
+                            It outputs the results to four different text files based on how exactly the observations
+                            are recorded internally.
+                            <br><br>
+                            This project is associated with the NASA Planetary Data System Small Bodies Node at the
+                            University of Maryland.
+                        </p>
+                        <a href="#" class="btn btn-primary card-link" style="pointer-events: none;">(Code currently
+                            unavailable)</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
             <div id="minecraft-backups" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
