updated writing.html to reflect private copies of papers

--- a/writing.html
+++ b/writing.html
@@ -136,7 +136,8 @@
                         "knowsLanguage": ["en", "en-US"]
                      },
         "license": "https://creativecommons.org/licenses/by-nc-sa/4.0/"
-        </script>
+        }
+    </script>
 </head>
 
 <body>
@@ -196,6 +197,9 @@
 
             <h5 class="text-center"><i>Please note that any works that have been submitted for publication and have not
                     yet undergone peer review will not be listed here</i></h5>
+            <h5 class="text-center"><i>All papers listed here are available privately upon request; please contact me
+                    at <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a> for copies</i>
+            </h5>
 
             <div class="card-spacing"></div>
 
@@ -216,7 +220,7 @@
                             This paper is associated with <i>HIST355: Civil War and the Rise of Industrialization</i> at
                             the University of Maryland.
                         </p>
-                        <a href="#" class="btn btn-primary card-link">PDF Coming Soon</a>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for a copy</a>
                     </div>
                 </div>
             </div>
@@ -238,7 +242,7 @@
                             This paper is associated with <i>HIST354: Ante-Bellum America</i> at the University of
                             Maryland.
                         </p>
-                        <a href="#" class="btn btn-primary card-link">PDF Coming Soon</a>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for a copy</a>
                     </div>
                 </div>
             </div>
@@ -260,7 +264,7 @@
                             This paper is associated with <i>HIST429A: Sex and Class in Nineteenth Century Britain</i>
                             at the University of Maryland.
                         </p>
-                        <a href="#" class="btn btn-primary card-link">PDF Coming Soon</a>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for a copy</a>
                     </div>
                 </div>
             </div>
@@ -282,7 +286,7 @@
                             This paper is associated with <i>HIST429A: Sex and Class in Nineteenth Century Britain</i>
                             at the University of Maryland.
                         </p>
-                        <a href="#" class="btn btn-primary card-link">PDF Coming Soon</a>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for a copy</a>
                     </div>
                 </div>
             </div>
@@ -307,7 +311,7 @@
                             This paper is associated with <i>HIST429A: Sex and Class in Nineteenth Century Britain</i>
                             at the University of Maryland.
                         </p>
-                        <a href="#" class="btn btn-primary card-link">PDF Coming Soon</a>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for a copy</a>
                     </div>
                 </div>
             </div>
@@ -331,7 +335,7 @@
                             This paper is associated with <i>HIST319R: Genghis Khan and the Mongols</i> at
                             the University of Maryland.
                         </p>
-                        <a href="#" class="btn btn-primary card-link">PDF Coming Soon</a>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for a copy</a>
                     </div>
                 </div>
             </div>
