stylization updates for index.html

--- a/index.html
+++ b/index.html
@@ -272,18 +272,16 @@
             <h4 id="fav-langs" class="text-center">My favorite languages</h4>
             <div class=" row langs-custom">
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/python.svg" class="langSVG" height="70px" title="Python"
-                        alt="Python">
+                    <img src="/assets/images/langs/python.svg" class="langSVG" title="Python" alt="Python">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/java.svg" class="langSVG" height="70px" title="Java" alt="Java">
+                    <img src="/assets/images/langs/java.svg" class="langSVG" title="Java" alt="Java">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/ocaml.svg" class="langSVG" height="70px" title="OCaml" alt="OCaml">
+                    <img src="/assets/images/langs/ocaml.svg" class="langSVG" title="OCaml" alt="OCaml">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/racket.svg" class="langSVG" height="70px" title="Racket"
-                        alt="Racket">
+                    <img src="/assets/images/langs/racket.svg" class="langSVG" title="Racket" alt="Racket">
                 </div>
             </div>
 
@@ -293,26 +291,25 @@
             <h4 id="other-langs" class="text-center">Other languages I've used</h4>
             <div class="row langs-custom">
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/c.svg" class="langSVG" height="70px" title="C" alt="C">
+                    <img src="/assets/images/langs/c.svg" class="langSVG" title="C" alt="C">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/rust.svg" class="langSVG" height="70px" title="Rust" alt="Rust">
+                    <img src="/assets/images/langs/rust.svg" class="langSVG" title="Rust" alt="Rust">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/ruby.svg" class="langSVG" height="70px" title="Ruby" alt="Ruby">
+                    <img src="/assets/images/langs/ruby.svg" class="langSVG" title="Ruby" alt="Ruby">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/html.svg" class="langSVG" height="70px" title="HTML5" alt="HTML5">
+                    <img src="/assets/images/langs/html.svg" class="langSVG" title="HTML5" alt="HTML5">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/css.svg" class="langSVG" height="70px" title="CSS3" alt="CSS3">
+                    <img src="/assets/images/langs/css.svg" class="langSVG" title="CSS3" alt="CSS3">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/javascript.svg" class="langSVG" height="70px" title="JavaScript"
-                        alt="JavaScript">
+                    <img src="/assets/images/langs/javascript.svg" class="langSVG" title="JavaScript" alt="JavaScript">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/sql.svg" class="langSVG" height="70px" title="SQL" alt="SQL">
+                    <img src="/assets/images/langs/sql.svg" class="langSVG" title="SQL" alt="SQL">
                 </div>
             </div>
 
@@ -322,16 +319,14 @@
             <h4 id="frameworks" class="text-center">Frameworks I've used</h4>
             <div class="row langs-custom">
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/frameworks/bootstrap.svg" class="langSVG" height="70px" title="Bootstrap"
+                    <img src="/assets/images/frameworks/bootstrap.svg" class="langSVG" title="Bootstrap"
                         alt="Bootstrap">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/frameworks/jquery.svg" class="langSVG" height="70px" title="jQuery"
-                        alt="jQuery">
+                    <img src="/assets/images/frameworks/jquery.svg" class="langSVG" title="jQuery" alt="jQuery">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/frameworks/plotly.svg" class="langSVG" height="70px" title="Plotly.js"
-                        alt="Plotly.js">
+                    <img src="/assets/images/frameworks/plotly.svg" class="langSVG" title="Plotly.js" alt="Plotly.js">
                 </div>
             </div>
 
