minor stylization update, added more SVGs for prog languages, etc.

--- a/index.html
+++ b/index.html
@@ -308,15 +308,12 @@
                 <div class="col-sm col-custom">
                     <img src="/assets/images/langs/javascript.svg" class="langSVG" title="JavaScript" alt="JavaScript">
                 </div>
-                <div class="col-sm col-custom">
-                    <img src="/assets/images/langs/sql.svg" class="langSVG" title="SQL" alt="SQL">
-                </div>
             </div>
 
             <hr />
 
-            <!-- SVGs of frameworks I have used -->
-            <h4 id="frameworks" class="text-center">Frameworks I've used</h4>
+            <!-- SVGs of frameworks, libraries, etc. I have used -->
+            <h4 id="frameworks" class="text-center">Frameworks and libraries I've used</h4>
             <div class="row langs-custom">
                 <div class="col-sm col-custom">
                     <img src="/assets/images/frameworks/bootstrap.svg" class="langSVG" title="Bootstrap"
@@ -327,6 +324,29 @@
                 </div>
                 <div class="col-sm col-custom">
                     <img src="/assets/images/frameworks/plotly.svg" class="langSVG" title="Plotly.js" alt="Plotly.js">
+                </div>
+                <div class="col-sm col-custom">
+                    <img src="/assets/images/frameworks/numpy.svg" class="langSVG" title="NumPy" alt="NumPy">
+                </div>
+                <div class="col-sm col-custom">
+                    <img src="/assets/images/frameworks/pandas.svg" class="langSVG" title="Pandas" alt="pandas">
+                </div>
+            </div>
+
+            <hr />
+
+            <!-- SVGs of database management systems I have used -->
+            <h4 id="frameworks" class="text-center">Database management systems I've used</h4>
+            <div class="row langs-custom">
+                <div class="col-sm col-custom">
+                    <img src="/assets/images/databases/postgresql.svg" class="langSVG" title="PostgreSQL"
+                        alt="PostgreSQL">
+                </div>
+                <div class="col-sm col-custom">
+                    <img src="/assets/images/databases/mariadb.svg" class="langSVG" title="MariaDB" alt="MariaDB">
+                </div>
+                <div class="col-sm col-custom">
+                    <img src="/assets/images/databases/sqlite.svg" class="langSVG" title="SQLite" alt="SQLite">
                 </div>
             </div>
 
