minor updates to sitemap.html

--- a/sitemap.html
+++ b/sitemap.html
@@ -145,8 +145,8 @@
 
 
                     <ul style="list-style-type: none; padding: 0px;">
-                        <li><a href=" /changelog.html">Changelog</a></li>
-                        <li><a href="/sitemap.html">Text Sitemap</a></li>
+                        <li><a href=" /changelog.html">Recent Changelog</a></li>
+                        <li><a href="/sitemap.html">Text Sitemap (This Page)</a></li>
                         <li><a href="https://github.com/psmit703/personal-website">GitHub Repo (External)</a></li>
                         <li><a href=" /privacy.html">Privacy Notice</a></li>
                     </ul>
