minor update to frameworks in index.html

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     <img src="/assets/images/frameworks/jquery.svg" class="langSVG" title="jQuery" alt="jQuery">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/frameworks/plotly.svg" class="langSVG" title="Plotly.js" alt="Plotly.js">
+                    <img src="/assets/images/frameworks/plotly.svg" class="langSVG" title="Plotly" alt="Plotly">
                 </div>
                 <div class="col-sm col-custom">
                     <img src="/assets/images/frameworks/numpy.svg" class="langSVG" title="NumPy" alt="NumPy">
