forgot something in last commit

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                     <img src="/assets/images/frameworks/numpy.svg" class="langSVG" title="NumPy" alt="NumPy">
                 </div>
                 <div class="col-sm col-custom">
-                    <img src="/assets/images/frameworks/pandas.svg" class="langSVG" title="Pandas" alt="pandas">
+                    <img src="/assets/images/frameworks/pandas.svg" class="langSVG" title="pandas" alt="pandas">
                 </div>
             </div>
 
