added more prog langs to index.html

--- a/index.html
+++ b/index.html
@@ -294,6 +294,12 @@
                     <img src="/assets/images/langs/c.svg" class="langSVG" title="C" alt="C">
                 </div>
                 <div class="col-sm col-custom">
+                    <img src="/assets/images/langs/haskell.svg" class="langSVG" title="Haskell" alt="Haskell">
+                </div>
+                <div class="col-sm col-custom">
+                    <img src="/assets/images/langs/dafny.svg" class="langSVG" title="Dafny" alt="Dafny">
+                </div>
+                <div class="col-sm col-custom">
                     <img src="/assets/images/langs/rust.svg" class="langSVG" title="Rust" alt="Rust">
                 </div>
                 <div class="col-sm col-custom">
