minor wording update to index.html

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                                 <li>Code maintainability (comments, modularity, etc.)</li>
                             </ul>
                         </li>
-                        <li>I have general interests in programming languages and their implementations
+                        <li>I have a general interest in programming language theory
                         </li>
                         <li>I am the (self-proclaimed) best ping pong player in the world
                             <ul>
