added another paper to writing.html

--- a/writing.html
+++ b/writing.html
@@ -207,6 +207,31 @@
             <div id="visions-of-the-west" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
+                        <h5 class="card-title">"The Tortured Gatsbys Department" or "The Rise and Fall of Jay Gatsby and
+                            the Spiders from Mars"<span style="float: right;">(Apr 2024)</span></h5>
+                        <!-- if you guessed Taylor Swift and David Bowie, you are correct -->
+                        <p class="card-text">Through treating three contemporary novels, Sinclair Lewis' <i>Babbitt</i>,
+                            Nella Larsen's <i>Passing</i>, and F. Scott Fitzgerald's <i>The Great Gatsby</i>, as primary
+                            sources, this paper argues that 1920s America was a reflection of the Gilded Age. By
+                            examining themes in each, such as the anti-union sentiments in <i>Babbitt</i>, the racial
+                            issues discussed in <i>Passing</i>, or the decadence and excess of <i>The Great Gatsby</i>,
+                            the paper effectively shows similarities to each of their Gilded Age counterparts,
+                            supporting the idea of a reflection across time periods that was visible in all aspects of
+                            life.
+                            <br><br>
+                            This paper is associated with <i>HIST356: Emergence of Modern America</i> at
+                            the University of Maryland.
+                        </p>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for a copy</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div id="visions-of-the-west" class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
                         <h5 class="card-title">"Welcome to the West, it's been waiting for you" or "Are you lost,
                             cowboy?"<span style="float: right;">(Nov 2023)</span></h5>
                         <!-- yes, these titles are references to Taylor Swift and Elle Coves -->
