--- a/resume.html
+++ b/resume.html
@@ -239,76 +239,81 @@
                 <ul>
                     <li>Dual Degree: Bachelor of Science, Computer Science; Bachelor of Arts, History</li>
                     <li>Minor, Trumpet Performance</li>
-                    <li>Cumulative GPA: 3.392 (Jan 2024)</li>
+                    <li>Cumulative GPA: 3.402 (May 2024)</li>
                     <li>Relevant Coursework: Programming Language Technologies and Paradigms, Intro to Data Science,
-                        Intro to Compilers;
-                        Intro to
-                        AI; Advanced Data Structures; Algorithms</li>
-                    <li>Member: Association for Computing Machinery; Multi-Agent Reinforcement Learning Reading Group;
+                        Intro to Compilers; Intro to AI; Advanced Data Structures; Algorithms</li>
+                    <li>Multi-Agent Reinforcement Learning Reading Group; Member: Association for Computing Machinery;
                         History Undergraduate Association</li>
                 </ul>
             </ul>
 
             <h4>Skills and Attributes</h4>
             <ul>
-                <li>Languages: Python, Java, Racket, OCaml, C, Rust, Ruby, HTML, CSS, JavaScript, SQL</li>
-                <li>Frameworks: Bootstrap, jQuery, Plotly.js</li>
-                <li>Tools and Environments: Linux, VS Code, Eclipse IDE, version control (Git/GitHub), Docker</li>
+                <li>Languages: Python, Java, Racket, OCaml, C, Haskell, Dafny, Rust, Ruby, HTML, CSS, JavaScript, SQL
+                </li>
+                <li>Frameworks and Libraries: Plotly.js, Bootstrap CSS, Pandas, NumPy</li>
+                <li>Tools and Environments: Linux, VS Code, version control (Git/GitHub)</li>
                 <li>Coding Skills: Functional programming, debugging, good code readability</li>
             </ul>
 
             <h4>Programming Projects</h4>
             <ul>
-                <li><strong>Comet Statistics (HTML, CSS, JS, Python, SQL)<span style="float: right">(Web Dev Intern at
+                <li><strong>Comet Statistics (Python, HTML, CSS, JS, SQL)<span style="float: right">(Web Dev Intern at
                             UMD,
                             Jun 2023 - Dec 2023)</span></strong></li>
                 <ul>
-                    <li>Uses Plotly.js to render comet discovery, orbital element, and observation statistics in graph
+                    <li>Used Plotly.js to render comet discovery, orbital element, and observation statistics in graph
                         form
                     </li>
                     <li>Used Python to create an automated backend script that pulls from a local PostgreSQL database
-                        and multiple external databases; accounts for numerous subtleties in the way comet data is
-                        represented</li>
+                        and multiple external databases; accounts for numerous discrepancies in the way comet data is
+                        represented
+                    </li>
                     <li>Presented the site as a contributed talk at the 33rd annual ADASS conference on Nov 8, 2023</li>
-                    <li><a href="https://sbnmpc.astro.umd.edu/cometInfo/">https://sbnmpc.astro.umd.edu/cometInfo/</a>
+                </ul>
+                <li><strong>Static Site Generator (Python, HTML, JSON)<span style="float: right">(Personal Project, Mar
+                            2024 - Present)</span></strong></li>
+                <ul>
+                    <li>Using Python to automatically generate static site files based on a template page and JSON input
+                    </li>
+                    <li>Using custom JSON schema to represent a site’s data fully and accurately</li>
+                    <li>Will be able to easily add, edit, or remove pages with consistent, sitewide results with minimal
+                        errors</li>
+                </ul>
+                <li><strong>MiniDafny: Z3 Integration (Haskell, Dafny, Z3)<span style="float: right">(Prog Lang
+                            Paradigms at UMD, Apr 2024 - May 2024)</span></strong></li>
+                <ul>
+                    <li>Implemented a subset of Dafny as defined by course faculty; integrated Z3 Theorem Prover to
+                        allow for automated formal verification of a program’s runtime validity using Hoare Logic</li>
+                    <li>Rewrote weakest preconditions generator from previous project to accommodate Z3’s SMT-LIB2
+                        syntax</li>
+                    <li>Implemented numerous logical equivalencies to further accommodate limitations of Z3’s syntax
                     </li>
                 </ul>
-                <li><strong>Personal Website (HTML, CSS, JS)<span style="float: right">(Personal Project, Jun 2023 -
-                            Dec 2023)</span></strong></li>
+                <li><strong>NYC Waste Management Trends, 2005-2023 (Python)<span style="float: right">(Intro to Data
+                            Science at UMD, May 2024)</span></strong></li>
                 <ul>
-                    <li>Designed a website ( <a href="https://psmit.dev/">https://www.psmit.dev/</a> ) focusing on user
-                        experience and mobile readiness</li>
-                    <li>Used JavaScript to implement features including dark mode preference and nav bar animations</li>
-                    <li>Makes calls to GitHub's REST API to display the ten most recent site changes</li>
-                </ul>
-                <li><strong>Fraud Plus: Interpreter and Compiler (Racket, x86)<span style="float: right">(Intro to
-                            Compilers
-                            at UMD, Oct 2023 - Nov
-                            2023)</span></strong></li>
-                <ul>
-                    <li>Implemented an interpreter and compiler for a subset of Racket as defined by course faculty</li>
-                    <li>Introduced variable scoping, requiring significant attention to proper use of the runtime stack
+                    <li>Data science project combining written analysis and code analysis to establish NYC waste trends
                     </li>
-                    <li>Introduced error detection and a larger set of type definitions to create a more feature-rich
-                        language</li>
-                    <li>Used proper stack discipline with nested expressions, ensuring no conflicts with the environment
+                    <li>Processed data in unique ways to find new insights into changing priorities in waste management
+                        over time</li>
+                    <li>Used basic ML techniques to create good models of waste management trends based on limited data
                     </li>
-                    <li>Ported features from a smaller subset, ensuring compatibility with error and scoping
-                        functionalities</li>
+                    <li><a
+                            href="https://www.psmit.dev/cmsc320-final-tutorial.html">https://www.psmit.dev/cmsc320-final-tutorial.html</a>
+                    </li>
                 </ul>
             </ul>
 
             <h4>Work Experience</h4>
             <ul>
                 <li><strong>Web Development Intern (University of Maryland Department of Astronomy)<span
-                            style="float: right">(Jun
-                            2023 -
-                            Present)</span></strong></li>
+                            style="float: right">(Jun 2023 - May 2024)</span></strong></li>
                 <ul>
                     <li>Created a comet statistic site for the NASA Planetary Data System Small Bodies Node at UMD</li>
                     <li>Creating a tool to automate converting from the "new" comet designation system to the "old"
                         system</li>
-                    <li>Gaining a strong understanding of SQL, interacting with web APIs, and general web development
+                    <li>Gained a strong understanding of SQL, interacting with web APIs, and general web development
                     </li>
                 </ul>
             </ul>
@@ -327,7 +332,7 @@
             <h3 class="text-center">Pete Smith</h3>
             <br>
             <p class="text-center">(443) 254-2441 | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a> |
-                Washington, D.C. Area | <a
+                Washington, D.C. Area | <a href="https://www.psmit.dev/">www.psmit.dev/</a> | <a
                     href="https://www.linkedin.com/in/petesmith-umd/">linkedin.com/in/petesmith-umd</a></p>
 
             <h4>Education</h4>
@@ -337,18 +342,17 @@
                 <ul>
                     <li>Dual Degree: BA, History; BS, Computer Science</li>
                     <li>Minor, Trumpet Performance</li>
-                    <li>Cumulative GPA: 3.392 (January 2024)</li>
+                    <li>Cumulative GPA: 3.402 (May 2024)</li>
                     <li>Relevant Coursework: Women and War in U.S. History; Immigration and Ethnicity in the U.S.;
                         Emergence of Modern America (1900-1945); Civil War and Industrialization (1860-1900)</li>
-                    <li>Member: History Undergraduate Association; Association for Computing Machinery; Multi-Agent
-                        Reinforcement Learning Reading Group</li>
+                    <li>Member: History Undergraduate Association; Multi-Agent
+                        Reinforcement Learning Reading Group; Association for Computing Machinery</li>
                 </ul>
             </ul>
             <h4>Work Experience</h4>
             <ul>
                 <li><strong>History Intern (Enslaved.org: Journal of Slavery and Data Preservation)<span
-                            style="float: right">(August
-                            2023 - December 2023)</span></strong></li>
+                            style="float: right">(August 2023 - December 2023)</span></strong></li>
                 <ul>
                     <li>Collaborated with a team at Virginia Tech on “Dangerous Harbor,” an NEH-funded project
                         researching runaway indentured servants and enslaved people in colonial Virginia and Maryland
@@ -358,39 +362,41 @@
                     <li>Created a user guide to introduce students to the project and its dataset</li>
                 </ul>
                 <li><strong>Web Development Intern (University of Maryland Department of Astronomy)<span
-                            style="float: right">(June 2023 -
-                            Present)</span></strong></li>
+                            style="float: right">(June 2023 - May 2024)</span></strong></li>
                 <ul>
                     <li>Created a comet statistic site for the NASA Planetary Data System Small Bodies Node at UMD</li>
-                    <li>Presented <i>Comet Statistics</i> as a contributed talk at the 33rd annual ADASS conference in
-                        Nov 2023</li>
-                    <li>Develop a tool to automate converting from the "new" to the "old" IAU comet designation system
+                    <li>Presented <i>Comet Statistics</i> as a contributed talk at the 33<sup>rd</sup> annual ADASS
+                        conference in Nov 2023</li>
+                    <li>Developed a tool to automate converting from the "new" to the "old" IAU comet designation system
                     </li>
                 </ul>
             </ul>
             <h4>Selected Papers</h4>
             <ul>
-                <li><strong>"Running Away from the Future"<span style="float: right">(History Intern at Enslaved.org,
-                            December 2023)</span></strong></li>
+                <li><strong>"Women, War, and Higher Education"<span style="float: right">(Women and War in U.S. History
+                            at UMD, May 2024)</span></strong></li>
                 <ul>
-                    <li>This research paper examines runaway indentured servants and enslaved people in
-                        seventeenth-century Virginia and Maryland, along with their surrounding legal landscape, to
-                        establish their specific reasons for running away and the considerations they had to make. By
-                        accounting for their conditions and increasingly harsh punishments, including with respect to
-                        race, this paper argues that the changing legal landscape served as both a motivation and a
-                        deterrent for those running away.
+                    <li>Through examining women's experiences at the University of Maryland from roughly 1922-1960, this
+                        paper argues that World War II and the surrounding war effort on the home front were paramount
+                        to the increasing and lasting acceptance of women's involvement on college campuses. Firstly,
+                        the paper explores the general historiography of the field, encompassing sources from
+                        historians, economists, sociologists, and other researchers. The paper then examines original
+                        research, which was conducted at the University of Maryland's Special Collections, which
+                        contains records regarding UMD's and the State of Maryland's history. By looking at records of
+                        Adele Stamp and other notable figures from UMD's history, the paper uses correspondence,
+                        scrapbooks, and newspaper articles to makes its argument nuanced and effective.
                     </li>
                 </ul>
-                <li><strong>"Welcome to the West, it's been waiting for you"<span style="float: right">(Civil War and
-                            Industrialization at UMD, November 2023)</span></strong></li>
+                <li><strong>"The Tortured Gatsbys Department”<span style="float: right">(Emergence of Modern America at
+                            UMD, April 2024)</span></strong></li>
                 <ul>
-                    <li>Through analyzing Laura Ingalls Wilder's <i>Little House</i> series and Willa Cather's <i>My
-                            Ántonia</i>, this
-                        paper argues that, in the decades following the westward expansion seen in the mid-to-late
-                        nineteenth century, popular media romanticized it to serve as a distraction from the pressing
-                        events of World War I and the Great Depression. This paper shows that these books simultaneously
-                        gave contemporary readers a means of escape and painted a nuanced picture of life in the
-                        American West.
+                    <li>By treating Sinclair Lewis' <i>Babbitt</i>, Nella Larsen's <i>Passing</i>, and F. Scott
+                        Fitzgerald's <i>The Great Gatsby</i> as primary sources, this paper (alternatively titled “The
+                        Rise and Fall of Jay Gatsby and the Spiders from Mars”) argues that the Roaring 'Twenties were
+                        in many ways a reflection of the Gilded Age. The paper looks at specific examples in each book
+                        of anti-union sentiments, government and business corruption, racism, decadence, and consumption
+                        of culture to show these similarities. Through incorporating a small number of lighthearted
+                        sentences, the paper effectively keeps the reader interested while making a strong argument.
                     </li>
                 </ul>
             </ul>
@@ -399,7 +405,8 @@
                 <li>Skills: Written and oral communication, critical thinking, research, teamwork, customer service</li>
                 <li>Attributes: Punctual, efficient, organized</li>
                 <li>Software: Proficient in Microsoft Office Suite, Google Docs Suite, and OpenRefine</li>
-                <li>Technical Skills: Python, Java, Racket, OCaml, C, Rust, Ruby, HTML, CSS, JavaScript, SQL</li>
+                <li>Technical Skills: Python, Java, Racket, OCaml, C, Haskell, Dafny, Rust, Ruby, HTML, CSS, JavaScript,
+                    SQL</li>
             </ul>
             <!-- end humanities resume -->
 
